@@ -1,0 +1,7 @@
+[SubtitleEditor Extension]
+_Name=Insert Subtitle From Keyframe
+_Description=Inserts subtitle using keyframe.
+Categorie=action
+Type=module
+Module=insertsubtitlefromkeyframe
+Authors=kitone <kitone at gna dot org>
