@@ -1,3 +1,8 @@
+2011-03-05  kitone  <kitone@gna.org>
+
+	* intltool.m4:
+	Update.
+
 2009-06-23  kitone  <kitone@gna.org>
 
 	* intltool.m4:
